<resources>
    <string name="app_name">Konquest</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="action_settings">Settings</string>
    <string name="action_connexion">Connexion</string>
    <string name="action_deconnexion">Déconnexion</string>
    <string name="action_courriel">Courriel :</string>
    <string name="action_motDePasse">Mot de passe :</string>
    <string name="action_lienEnregistrement">Enregistrement</string>
    <string name="action_pseudonyme">Pseudonyme :</string>
    <string name="action_enregistrement">Enregistrement</string>
    <string name="action_scanner">Scanner</string>
    <string name="action_lstUnites">Liste des Unites</string>
    <string name="action_lstExplorations">Liste des Exploration</string>
    <string name="action_konquest">Konquest</string>
    <string name="action_inox">Inox :</string>
    <string name="action_location">Location :</string>
    <string name="action_runes">Vos runes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="air">air</string>
    <string name="darkness">darkness</string>
    <string name="earth">earth</string>
    <string name="energy">energy</string>
    <string name="fire">fire</string>
    <string name="life">life</string>
    <string name="light">light</string>
    <string name="logic">logic</string>
    <string name="music">music</string>
    <string name="space">space</string>
    <string name="toxic">toxic</string>
    <string name="water">water</string>
    <string name="runes">Runes</string>
    <string name="l_image_de_la_rune">L\'image de la rune.</string>
    <string name="fin_voyage"> Mettre fin au voyage</string>
    <string name="debloquer_unit">Débloquer la unite</string>
    <string name="mapandromia">MapAndromia</string>

</resources>
