<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ca.qc.cstj.konquest.Activity.EnregistrementActivity">

    <EditText
        android:id="@+id/editTextCourrielEnregistrement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="58dp" />

    <EditText
        android:id="@+id/editTextMotDePasseEnregistrement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="282dp" />

    <TextView
        android:id="@+id/textViewCourrielEnregistrement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_courriel"
        android:textSize="20dp"
        tools:layout_editor_absoluteX="152dp"
        tools:layout_editor_absoluteY="31dp" />

    <TextView
        android:id="@+id/textViewMotDePasseEnregistrement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_motDePasse"
        android:textSize="20dp"
        tools:layout_editor_absoluteX="126dp"
        tools:layout_editor_absoluteY="255dp" />

    <Button
        android:id="@+id/buttonEnregistrement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_enregistrement"
        tools:layout_editor_absoluteX="120dp"
        tools:layout_editor_absoluteY="359dp" />

    <EditText
        android:id="@+id/editTextPseudonymeEnregistrement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="172dp" />

    <TextView
        android:id="@+id/textViewPseudonymeEnregistrement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_pseudonyme"
        android:textSize="20dp"
        tools:layout_editor_absoluteX="129dp"
        tools:layout_editor_absoluteY="145dp" />

</android.support.constraint.ConstraintLayout>
