<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ca.qc.cstj.konquest.fragments.AccueilFragment">

        <LinearLayout
            android:id="@+id/LinearLayoutContenuMain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/LinearLayoutPseudonyme"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewMainPresentationPseudonyme"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:text="@string/action_pseudonyme"
                    android:textSize="24dp" />

                <TextView
                    android:id="@+id/textViewMainPseudonyme"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:textSize="30dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayoutInox"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewMainInoxPresentation"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:text="@string/action_inox"
                    android:textSize="30dp" />

                <TextView
                    android:id="@+id/textViewMainInox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="30dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayoutLocation"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="2"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/textViewMainLocationPresentation"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:text="@string/action_location"
                    android:textSize="30dp" />

                <TextView
                    android:id="@+id/textViewMainLocation"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:textSize="30dp" />

            </LinearLayout>

            <Button
                android:id="@+id/buttonMapAndromia"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="0"
                android:text="Map Andromia" />
        </LinearLayout>

</FrameLayout>
